<resources>
    <string name="app_name">Учёт картриджей</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Страница входа-->
    <string name="login">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="btn_auth">Авторизация</string>

    <!--Заголовки навигационной панели-->
    <string name="menu_new_cartridge">Добавление картриджей</string>
    <string name="menu_operations">Операции</string>
    <string name="menu_cartridge_actions">Учёт картриджей</string>
    <string name="menu_logout">Выход</string>
    <string name="menu_settings">Настройки</string>

    <!--Страница основных действий с картриджами-->
    <string name="out">Выдача</string>
    <string name="in">Приём</string>
    <string name="decommiss">Списание</string>
    <string name="manual_input">Ручной ввод</string>
    <string name="barcode_scan">Отсканировать штрих-код</string>
    <string name="cartridge_info">Информация о картридже</string>
    <string name="cartridge_number">Номер картриджа...</string>
    <string name="cartridge_model">Модель картриджа...</string>
    <string name="cartridge_department">Местоположение...</string>
    <string name="cartridge_department_datetime">Дата местоположения...</string>
    <string name="btn_submit">Подтвердить действие</string>
    <string name="scanner">Наведите камеру на штрих-код</string>

    <!--Страница операций над картриджами-->
    <string name="cartridge_refill">Отправить картриджи на заправку</string>
    <string name="cartridge_receive">Принять картриджи с заправки</string>

    <!--Страница добавления картриджей-->
    <string name="btn_add_cartridge">Добавить картриджи</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>