<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_cartridge"
            android:icon="@drawable/outline_add_data_24"
            android:title="@string/menu_new_cartridge" />
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/outline_action_24"
            android:title="@string/menu_operations" />
        <item
            android:id="@+id/nav_cartridge_actions"
            android:icon="@drawable/outline_edit_data_24"
            android:title="@string/menu_cartridge_actions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>