<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cartridge_actions">

    <fragment
        android:id="@+id/nav_cartridge_actions"
        android:name="com.mobile.cartridgemanagement.ui.cartridge_actions.CartridgeActionsFragment"
        android:label="@string/menu_cartridge_actions"
        tools:layout="@layout/fragment_cartridge_actions" />

    <fragment
        android:id="@+id/nav_new_cartridge"
        android:name="com.mobile.cartridgemanagement.ui.new_cartridge.NewCartridgeFragment"
        android:label="@string/menu_new_cartridge"
        tools:layout="@layout/new_cartridge" />

    <fragment
        android:id="@+id/nav_operations"
        android:name="com.mobile.cartridgemanagement.ui.operations.OperationsFragment"
        android:label="@string/menu_operations"
        tools:layout="@layout/fragment_operations" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mobile.cartridgemanagement.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>